佩瑜紧急通道需求
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14426 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/js/view/weixin_edit_news_view/template.html
+++ b/weapp/static_v2/js/view/weixin_edit_news_view/template.html
@@ -49,7 +49,7 @@
 	                    </div>
 	                </div>
 
-                    <div class="control-group mt5">
+                    <div class="control-group mt5" style="height:330px;">
                         <span class="star_show"></span>
                         <label class="" for="text">正文</label>
                         <div class="controls xui-richHtml fr">
@@ -82,7 +82,7 @@
                                     <div class="xui-help-box">
 		                                <div class="fl xa-tips xui-helpIcon" >?</div>
 		                                <div class="xa-tips-wrap xui-help-info xui-hide">
-		                                	设置链接地址后，除除群发图文外，其他模块使用的图文均不显示正文内容
+		                                	设置链接地址后，除群发图文外，其他模块使用的图文均不显示正文内容
 							            </div>
 						            </div>
                                 </div>
