修复带参数二维码bug 2555 2559
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14578 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -128,7 +128,7 @@ textarea{resize:none}
 .w{width:100%}
 .h20{height:20px;}
 .h25{height:25px;}
-.h30{height:30px;}
+.h30{height:30px!important;}
 .h38{height:38px;}
 .h40{height:40px!important;}
 .h50{height:50px;}
