修复带参数二维码bug 2555 2559
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14585 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -108,12 +108,22 @@
 		
 		//提交二维码表单
 		$(".xa-footerBtn").delegate('.xa-submit','click',function() {
+
+
 			var name = $.trim($('[name="name"]').val());
 			if(name==''){
 				W.showHint('error', '二维码名称不能为空');
 				return false;
 			}
-			
+			var jifen = $.trim($('[name="prize_score"]').val());
+			if(jifen==''){
+				W.showHint('error', '积分值不能为空');
+				return false;
+			}
+			if(!W.validate()){
+				W.showHint('error', '积分值格式错误！');
+				return false;
+			}
 			var textContent = $.trim($('[name="text_content"]').val());
 			var materialId = 0;
 			var chose = $(".xa-choseCoupon").html();
