[fix bug]修复扫码回复bug
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14601 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -157,7 +157,8 @@
 			}
 
 			var replyType = 0;
-			if(materialId > 0) {
+			var activeLink = $('#edit-message-panel li[class="active"]').text();
+			if(activeLink === '图文消息' && materialId > 0) {
 				replyType = 2;
 				textContent = '';
 			} else {
