--- a/weapp/templates/base.html
+++ b/weapp/templates/base.html
@@ -53,7 +53,9 @@
 			<script type="text/javascript" src="/static/jquery/jquery-1.9.1.min.js"></script>
 			<script type="text/javascript" src="/static/jquery/jquery-migrate-1.2.1.js"></script>
 			<script type="text/javascript" src="/static/jquery/jquery.tmpl.min.js"></script>
+
 			<script type="text/javascript" src="/static/jquery/jquery-ui-1.10.3/jquery-ui-1.10.3.custom.min.js"></script>
+			<script type="text/javascript" src="/static_v2/lib/jquery/jquery-ui-timepicker-addon.js"></script>
 			<script type="text/javascript" src="/static/jquery/jquery.uploadify-3.2.min.js"></script>
 			<script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>
 			<script type="text/javascript" src="/static/backbone/underscore-1.4.4.min.js"></script>
@@ -89,6 +91,7 @@
 			<script type="text/javascript" src="/static/js/app/market_tools/Lottery.js"></script>
 			<script type="text/javascript" src="/static/js/app/market_tools/MemberQrcode.js"></script>
 			<script type="text/javascript" src="/static/js/app/market_tools/RedEnvelope.js"></script>
+			<script type="text/javascript" src="/static/js/app/market_tools/ShakePrize.js"></script>
 		   <script type="text/javascript" src="/static/js/common/TitleSet.js"></script>
 			<!-- views start -->
 			{{ weapp_models|safe }}
