--- a/weapp/weixin2/templates/weixin/mp_user/mp_user.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user.html
@@ -43,7 +43,7 @@
 						微信
 						</div>
 						<div style="margin-top: 20px;  margin-left: 101px">
-						如果使用中发现接口有异常，请点击 <a href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{component_info.app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://weapp.weizoom.com/weixin/component/receiveauthcode/" target="_blank">重新授权</a> 试试
+						如果使用中发现接口有异常，请点击 <a href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{component_info.app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://{{request_host}}/weixin/component/receiveauthcode/" target="_blank">重新授权</a> 试试
 						</div>
 						{% endif %}
 					
