--- a/weapp/weixin2/templates/weixin/mp_user/mp_user_index.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user_index.html
@@ -21,7 +21,7 @@
 					<p class="mt20"> 绑定后即可在这里管理您的公众号，微众提供比微信后台更强大的功能！</p>
 					<div class="mt30">
 
-						<a style="background-color:#14d214" class="btn btn-success cert-setting-btn js-wxauth-btn" href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{component_info.app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://weapp.weizoom.com/weixin/component/receiveauthcode/" target="_blank"><img src="/static_v2/img/editor/weixinlogo.png">&nbsp;&nbsp;&nbsp;<B>我有微信公众号，立即设置</B></a>
+						<a style="background-color:#14d214" class="btn btn-success cert-setting-btn js-wxauth-btn" href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{component_info.app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://{{request_host}}/weixin/component/receiveauthcode/" target="_blank"><img src="/static_v2/img/editor/weixinlogo.png">&nbsp;&nbsp;&nbsp;<B>我有微信公众号，立即设置</B></a>
 					</div>
 				</div>
 				<div class="line pa" style="border-left:1px #ccc solid;height:100px;left:655px;"></div>
