[merge]: *合并微众卡改版
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14732 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -611,6 +611,15 @@ select{
 	background-repeat: no-repeat;
 	background-position: right;
 }
+
+.xui-mainPanel .xui-sideBar ul li.active_third a{
+    color:#1262b7;
+}
+
+.xui-sideBar-third{
+	font-size: 13px;
+}
+
 .xui-mainPanel .xui-sideBar ul li.active a .xui-icon-arrow{
 	display: none;
 }
