--- a/weapp/templates/base_v2.html
+++ b/weapp/templates/base_v2.html
@@ -32,6 +32,7 @@
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/mall_promotion.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/mall_home.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/member.css">
+		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/card_num.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/weixin_advance_manage.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/weixin_message.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/mass_message.css">
@@ -84,6 +85,11 @@
 			<script type="text/javascript" src="/static_v2/js/system/zero_clipboard.js"></script>
 			<script type="text/javascript" src="/static_v2/js/system/emotion.js"></script>
 			<script type="text/javascript" src="/static_v2/js/system/template-0.9.js"></script>
+
+			<script type="text/javascript" src="/static_v2/js/common/LoadingView.js"></script>
+			<script type="text/javascript" src="/static_v2/js/common/ErrorHintView.js"></script>
+			<script type="text/javascript" src="/static_v2/js/common/DropBox.js"></script>
+			<script type="text/javascript" src="/static_v2/js/common/ItemDeleteView.js"></script>
 			<!-- views start -->
 			{{ weapp_models|safe }}
 			<!-- views end -->
