--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -44,6 +44,7 @@
 					<li>
 						<a {% ifequal first_nav_name 'order' %}class="active"{% endifequal %} href='/mall/orders/get/' title='订单管理'>订单管理</a>
 					</li>
+					
 					{% if 'manage_promotion'|satisfy_permission:request %}
 					<li>
 						<a {% ifequal first_nav_name 'promotion' %}class="active"{% endifequal %} href='/mall_promotion/promotion_list/get/' title='促销管理'>促销管理</a>
@@ -102,7 +103,18 @@
 						<i class="xui-icon-arrow"></i>
 						</a>
 					   </li>
-						{% else %}
+						<!-- 三级导航 -->
+						{% if nav.third_navs and second_nav_name == nav.name %}
+							{% for third_nav in nav.third_navs %}
+								<li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
+									<a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
+										&nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
+										<i class="xui-icon-arrow"></i>
+									</a>
+								</li>
+							{% endfor %}
+						{% endif %}
+					{% else %}
 					    <li class="{% ifequal second_nav_name nav.name %}active{% endifequal %}">
 					    <a href="{{nav.url}}" title="{{nav.title}}" name="{{nav.name}}">
 						<i class="xui-icon-sideBar xui-sideBar-{{nav.name}}"></i> {{nav.title|safe}}
@@ -111,6 +123,17 @@
 						{% endif %}
 						</a>
 					   </li>
+							<!-- 三级导航 -->
+							{% if nav.third_navs and second_nav_name == nav.name %}
+								{% for third_nav in nav.third_navs %}
+									<li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
+										<a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
+											&nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
+											<i class="xui-icon-arrow"></i>
+										</a>
+									</li>
+								{% endfor %}
+							{% endif %}
 						{% endif %}
 					
 					{% endif %}
