git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14762 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/card/templates/card/editor/weizoom_channel_card_detail.html
+++ b/weapp/card/templates/card/editor/weizoom_channel_card_detail.html
@@ -113,9 +113,9 @@
                     <td>
                         {{each(i,card) card_order[1]}}
                             {{if i<2}}
-                                <div style="height:35px;line-height:35px">${card.card_id}</div>
+                                <div style="height:35px;line-height:35px">${card.weizoom_card_id}</div>
                             {{else}}
-                                <div class="channel_display_none">${card.card_id}</div>
+                                <div class="channel_display_none">${card.weizoom_card_id}</div>
                             {{/if}}
                         {{/each}}
                     </td>
