[update]: *修改bug BUG 2664
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14796 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/market_tools/tools/shake/templates/shake/webapp/shake.html
+++ b/weapp/market_tools/tools/shake/templates/shake/webapp/shake.html
@@ -186,7 +186,7 @@
 	                	
 	                } else {
 	                	$('.notice').html("恭喜您")
-	                	$('.mark').html('恭喜您获得'+data.result.send_price+'元现金红包')
+	                	$('.mark').html('恭喜您获得<h2>'+data.result.send_price+'元</h2>现金红包')
 	                }
 	                $('.xa-pop').removeClass('hidden');
 
