修复合并代码导致的模板冲突
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14799 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -47,6 +47,7 @@
 					<li>
 						<a {% ifequal first_nav_name 'order' %}class="active"{% endifequal %} href='/mall/orders/get/' title='订单管理'>订单管理</a>
 					</li>
+					{% endif %}
 					{% if 'manage_promotion'|satisfy_permission:request %}
 					<li>
 						<a {% ifequal first_nav_name 'promotion' %}class="active"{% endifequal %} href='/mall_promotion/promotion_list/get/' title='促销管理'>促销管理</a>
