商品规格添加及管理隐藏
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14807 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/model_properties.html
+++ b/weapp/mall/templates/mall/editor/model_properties.html
@@ -11,12 +11,12 @@
     </ul>
 
     <ul class="nav nav-tabs">
-        <li>
+        <li class="active">
             <a href="/mall/property_templates/get/">属性管理</a>
         </li>
-        <li class="active">
+        <!--li class="active">
             <a href="javascript:void(0);">规格管理</a>
-        </li>
+        </li-->
     </ul>
     <div class="xa-specification xui-specification">
         <table class="table {% if not model_properties %} xui-hide {% endif %}" data-category-id="{{category.id}}" >
