[update]: *修改摇一摇样式和提示
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14814 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/market_tools/tools/shake/css/shake.css
+++ b/weapp/market_tools/tools/shake/css/shake.css
@@ -236,7 +236,8 @@ div[class^="xui-star"]{
 .xui-pop p{
 	font-size: 0.9rem;
 	color:#454545;
-	top: 32%;
+	top: 35%;
+	padding:0 25px;
 }
 .xui-pop .xui-close{
 	height: 13.1783%;
@@ -256,7 +257,7 @@ div[class^="xui-star"]{
 .xui-redBtn{
 	background-color: #d81c26;
 	color:#fff;
-	top:60%;
+	top:65%;
 }
 .xui-whiteBtn{
 	background-color: #fff;
