--- a/weapp/market_tools/tools/activity/templates/activity/editor/activity_members.html
+++ b/weapp/market_tools/tools/activity/templates/activity/editor/activity_members.html
@@ -93,7 +93,7 @@
 						</td>
 						<td style="width: 85px;">
 						{{if webapp_user.member.username_for_html}}
-						<a href="/webapp/user_center/member/${member.id}/">
+						<a href="/member/member_detail/edit/?id=${member.id}">
 							{{html webapp_user.member.username_for_html}}
 						</a>
 						{{else}}
