--- a/weapp/market_tools/tools/red_envelope/templates/red_envelope/editor/list_red_envelope.html
+++ b/weapp/market_tools/tools/red_envelope/templates/red_envelope/editor/list_red_envelope.html
@@ -47,7 +47,7 @@
 						<td>
 							<div>
 								{{if record.user_id}}
-								<a href="/webapp/user_center/member/${record.user_id}/">{{html record.username}}</a>
+								<a href="/member/member_detail/edit/?id=${record.user_id}">{{html record.username}}</a>
 								{{else}}
 								{{html record.username}}
 								{{/if}}
