--- a/weapp/market_tools/tools/research/templates/research/editor/research_members.html
+++ b/weapp/market_tools/tools/research/templates/research/editor/research_members.html
@@ -35,7 +35,7 @@
 						</td>
 						<td style="width: 85px;">
 						{% if member %}
-						<a href="/webapp/user_center/member/{{ member.id }}/">
+						<a href="/member/member_detail/edit/?id={{ member.id }}">
 							{{ member.username_for_html|safe }}
 						</a>
 						{% else%}
